--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -80,6 +80,8 @@
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="{{ url_for('Changed_readonly') }}">Changed Read Only</a>
               <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="{{ url_for('Risk_auto_cut') }}">Risk Auto Cut</a>
+              <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="https://www.dailyfx.com/economic-calendar">Daily FX Calandar</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="http://www.cfhclearing.com/products/">CHF Product List</a>
