--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -93,16 +93,10 @@
               <a class="dropdown-item" href="https://trade.cfhclearing.com/Pages/Login.aspx?ReturnUrl=%2f">CFH Clear Pro Web</a>
               <a class="dropdown-item" href="https://backoffice.cfhclearing.com">CFH Back Office</a>
               <div class="dropdown-divider"></div>
-
-
-
-
+              <a class="dropdown-item" href="{{ url_for('CFH_Live_Position') }}">CFH Live Position</a>
+              <div class="dropdown-divider"></div>
             </div>
           </li>
-
-
-
-
 
 
           <li class="nav-item dropdown">
