--- a/Risk_Aaron/app/templates/Standard_Single_Table.html
+++ b/Risk_Aaron/app/templates/Standard_Single_Table.html
@@ -401,7 +401,7 @@
 
 <div class="row">
   <div class="col-lg-12 col-md-12 col-sm-12" id="Table1">
-    Table.
+    Genrating Data. Please Wait..
   </div>
   <br>
 
