--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -95,6 +95,8 @@
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="{{ url_for('CFH_Live_Position') }}">CFH Live Position</a>
               <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="{{ url_for('CFH_Symbol_Update') }}">CFH Symbol Update</a>
+              <div class="dropdown-divider"></div>
             </div>
           </li>
 
