Woking on A Book page with CFH FIX
A Book page with CFH Fix position.

--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -67,20 +67,14 @@
               <a class="dropdown-item" href="{{ url_for('add_off_set') }}">A Book Offset</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="{{ url_for('Live3_MT4_Users_web') }}">Risk Download Page</a>
-              <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="{{ url_for('noopentrades_changegroup') }}">Change Group (No Open Trades)</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="{{ url_for('Create_User') }}">Create Users</a>
-              <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="{{ url_for('Bloomberg_Dividend') }}">Bloomberg Dividend</a>
-              <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="{{ url_for('BGI_Swaps') }}">BGI Swaps</a>
-              <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="{{ url_for('Changed_readonly') }}">Changed Read Only</a>
-              <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="{{ url_for('Risk_auto_cut') }}">Risk Auto Cut</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="https://www.dailyfx.com/economic-calendar">Daily FX Calandar</a>
+              <a class="dropdown-item" href="{{ url_for('Create_User') }}">Create Users</a>
+
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/1wBifOwaghe3lRsxRTRUMkTBEvLN8pmUWlHuGTuoXfFY/edit#gid=1332723419">Risk/Marketting Holiday Timing</a>
               <div class="dropdown-divider"></div>
@@ -94,6 +88,11 @@
               <a class="dropdown-item" href="{{ url_for('CFH_Symbol_Update') }}">CFH Symbol Update</a>
               <a class="dropdown-item" href="{{ url_for('cfh_details') }}">CFH FIX Details</a>
               <div class="dropdown-divider"></div>
+
+              <a class="dropdown-item" href="https://www.dailyfx.com/economic-calendar">Daily FX Calandar</a>
+              <a class="dropdown-item" href="https://global.markets.com/holiday-schedule/">Global Markets Tradig Holiday</a>
+
+
             </div>
           </li>
 
