--- a/Risk_Aaron/app/templates/Standard_Multi_Table.html
+++ b/Risk_Aaron/app/templates/Standard_Multi_Table.html
@@ -137,7 +137,13 @@
           $( "#btn_refresh_page" ).addClass( "btn-info" );
 
           var Post_Data = { };
-          Custom_Ajax_Call(Post_Data, "{{ ajax_url }}", "Table1", "Table1_Raw", "Table1_Raw_Error", '{{ Table_name }}', ["Update Slow"] );
+          var Table_Caption = [];
+          {% for tb in Table_name %} // Want to add in the table name
+            Table_Caption.push("{{ tb }}")
+          {% endfor %}
+
+          Custom_Ajax_Call(Post_Data, "{{ ajax_url }}", "Table1_Raw_Error", Table_Caption,  ["Update Slow"] );
+          //"Table1", "Table1_Raw", "Table1_Raw_Error", '{{ Table_name[0] }}',
 
 
       }
@@ -154,7 +160,7 @@
       // zero_out - Need to Zero out the table (To make it a shorter table)
       // Table_Alert_Word - Words that would cause the cell in the table to be red.
 
-      function Custom_Ajax_Call(Post_Data, ajax_url, table_id, raw_return_id, error_card_id, table_caption, Table_Alert_Word ) {
+      function Custom_Ajax_Call(Post_Data, ajax_url, error_card_id, table_caption, Table_Alert_Word ) {
           Increment_counter = 0;  // To stop the count.
           $.ajax({
               url:ajax_url,
@@ -164,10 +170,17 @@
               dataType: "JSON",
               timeout: 45*1000,
               success: function(data){
-              data;
-              table_id;
-              $('#' + table_id ).html(Draw_Table(data, table_caption, "table table-hover table-sm table-responsive-sm basic_table bg-light",Table_Alert_Word, {{ replace_words }} ) + '<span class="right-text small-text bg-light p-3 m-2">' + return_Time_String() + "</span>");
-              $('#' + raw_return_id).html(JSON.stringify(data));
+              //data;
+              //table_id;
+              console.log("Length of data: " + data.length);
+              for (i = 0; i < data.length; i++){
+                if (i >= {{ Table_name|length }}){  // No more table to fit data.
+                  break;
+                }
+                $('#Table' + (i+1).toString() ).html(Draw_Table(data[i], table_caption[i], "table table-hover table-sm table-responsive-sm basic_table bg-light",Table_Alert_Word, {{ replace_words }} ) + '<span class="right-text small-text bg-light p-3 m-2">' + return_Time_String() + "</span>");
+                $('#Table' + (i+1).toString() + '_Raw').html(JSON.stringify(data[i]));
+              }
+
             }, error: function(xhr,status,error){
                   //console.log( "Into the Error Function. " );
 
@@ -400,9 +413,15 @@
 
 
 <div class="row">
-  <div class="col-lg-12 col-md-12 col-sm-12" id="Table1">
-    Genrating Data. Please Wait..
-  </div>
+
+  {% for i in range(1, Table_name|length + 1) %}
+    <div class="col-lg-12 col-md-12 col-sm-12" id="Table{{ i }}">
+      Genrating Data. Please Wait..
+    </div>
+  {% endfor %}
+
+
+
   <br>
 
   {% if description %}
@@ -413,24 +432,26 @@
 
 </div>
   <br>
-<p>
-  <button class="btn btn-secondary" type="button" data-toggle="collapse" data-target="#Table1_Raw_Div" aria-expanded="false">
-    Show Table
-  </button>
 
-</p>
+  {% for i in range(1, Table_name|length + 1) %}
+    <p>
+      <button class="btn btn-secondary" type="button" data-toggle="collapse" data-target="#Table{{ i }}_Raw_Div" aria-expanded="false">
+        Show Table
+      </button>
 
-<div class="collapse" id="Table1_Raw_Div">
-  <div class="card card-body">
-    <b>Table 1 Raw JSON:</b> <br>
-    <span id="Table1_Raw"></span>
-  </div>
-  <div class="card card-body">
-    <b>MT4/LP Position Ajax Error:</b> <br>
-    <span id="Table1_Error"></span>
-  </div>
-</div>
+    </p>
 
+    <div class="collapse" id="Table{{ i }}_Raw_Div">
+      <div class="card card-body">
+        <b>Table 1 Raw JSON:</b> <br>
+        <span id="Table{{ i }}_Raw"></span>
+      </div>
+      <div class="card card-body">
+        <b>MT4/LP Position Ajax Error:</b> <br>
+        <span id="Table{{ i }}_Error"></span>
+      </div>
+    </div>
+  {% endfor %}
 {% endblock %}
 
 
