Change Multi table web page to async for ajax
Standard multi table html changed to async for ajax

--- a/Risk_Aaron/app/templates/Standard_Multi_Table.html
+++ b/Risk_Aaron/app/templates/Standard_Multi_Table.html
@@ -66,11 +66,11 @@
       {% endif %}
 
 
-      setInterval(refresh_page_time, 500);    // To constantly refresh clock on page
-
-      function refresh_page_time(){           // To constantly refresh clock on page.
-          $('#page_time').html(return_Time_String());
-      }
+      // setInterval(refresh_page_time, 500);    // To constantly refresh clock on page
+      //
+      // function refresh_page_time(){           // To constantly refresh clock on page.
+      //     $('#page_time').html(return_Time_String());
+      // }
       // function Refresh_H1(){
       //     $('#time_header').html(return_Time_String());
       // }
@@ -169,9 +169,9 @@
               url:ajax_url,
               data    : Post_Data,
               type: 'POST',
-              async: false,
+              //async: false,
               dataType: "JSON",
-              timeout: 45*1000,
+              timeout: 20*1000,
               success: function(data){
               //data;
               //table_id;
