--- a/Risk_Aaron/app/templates/Standard_Single_Table.html
+++ b/Risk_Aaron/app/templates/Standard_Single_Table.html
@@ -58,6 +58,7 @@
 
           // If the call is to be made.
           if (Refresh_Page_Counter >=  {{ setinterval }}){
+            console.log( return_Time_String());
             //Increment_counter = 0;
             Table1_Update();
             Refresh_Page_Counter = 0;
