--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -72,6 +72,7 @@
               <a class="dropdown-item" href="{{ url_for('BGI_Swaps') }}">BGI Swaps</a>
               <a class="dropdown-item" href="{{ url_for('Changed_readonly') }}">Changed Read Only</a>
               <a class="dropdown-item" href="{{ url_for('Risk_auto_cut') }}">Risk Auto Cut</a>
+              <a class="dropdown-item" href="{{ url_for('Equity_protect') }}">Equity Protect</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="{{ url_for('Create_User') }}">Create Users</a>
 
