--- a/Risk_Aaron/app/templates/Standard_Single_Table.html
+++ b/Risk_Aaron/app/templates/Standard_Single_Table.html
@@ -54,7 +54,7 @@
       // Call in every second, will check and update button.
       function Refresh_Page_seconds_call(){
           Refresh_Page_Counter = Refresh_Page_Counter + Increment_counter;
-          console.log( return_Time_String());
+          //console.log( return_Time_String());
 
           // If the call is to be made.
           if (Refresh_Page_Counter >=  {{ setinterval }}){
